@@ -4,6 +4,6 @@ Group=AudioDecoder
 Name=K3b MAD Decoder
 Author=Sebastian Trueg
 Email=trueg@k3b.org
-Version=3.0
+Version=3.1
 Comment=Decoding module to decode MPEG 1 Layer III files
 Licence=GPL
