@@ -43,7 +43,8 @@ Show system device name in case the string representing two devices are equal.
 Fixed the docking issues. No floating dock windows anymore. :) I have no idea why I wasn't able to do this 
 	before... it was so easy after all.
 Plugin based Audio Output system for Audio project "preview".
-
+Dropped id3lib in favor of TagLib (great work Scott :)
+	
 0.11.10
 Support Mp3 files starting with multiple ID3 tags.
 Improved ~ handling in the QuickDirSelector.
